--- a/styles/style.css
+++ b/styles/style.css
@@ -3,54 +3,244 @@
     font-optical-sizing: auto;
     /* font-weight: <weight>; */
     font-style: normal;
-  }
-
-
-.header{
-
+    margin: 0px 0px;
+}
+.shape{
+    src: url("https://fonts.cdnfonts.com/css/miama");
 }
 
+.fitness, .navbar{
+    padding: 5px;
+}
 .fitness{
-    font-size: 36px;
-    font-weight: 800;
+    /* grid-area: fitness; */
+    padding: 20px 0px 20px 0px;
+    color: #E6533C;
+    font-size: 1.5em;
+    place-content: center;
 
-}
-
-.header-bar{
-    display: flex;
-    justify-content: space-between;
     
-    width: 1500px;
-    height: 50px;
+
+}
+.navbar{
+    /* grid-area: navbar; */
+    font-size: 19px;
+    align-content: center;
+    justify-content: center;
+    padding: 20px 0px 20px 0px;
 }
 
-.header-items{
-    height: 50px;
-    width: 500px;
+nav>ul{
     list-style: none;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    border: 4px solid #424242;
+    border-radius: 39px;
+    padding: 20px 0px;
+    place-items: center; /* It will center all the list items. place-items(align-items+justify-items) */
+}
+.item1{
+    padding: 19px 80px 19px 80px;
+    border: 1px solid black;
+    border-radius: 46px;
+    background-color: #E6533C;
+    border: hidden;
+    color: white;
+}
+li>a{
+    text-decoration: none;
+    color: white;
+    
+}
+
+.container-1{
+    grid-area: contrainer-1;
+    /* background-color: #111111; */
+    /* gap: 500px; */
+    /* display: grid; */
+    display: flex;
+    justify-content: space-around;
+
+}
+
+/* ------------------------------------------------------------------ */
+
+@font-face {
+    font-family: Miama;
+    src: url('../font/Miama-Regular.ttf');
+}
+
+
+.p-1{
+    /* border: 1px solid black; */
+    font-size: 7em;
+    color: white;
+    width: 40vw;
+    height: 30vh;
+    line-height: 1;
+    
+}
+.p-2{
+    /* border: 1px solid orange; */
+    font-size: 1.5em;
+    color: rgba(255, 255, 255, 0.50);
+    width: 40vw;
+    height: 2vh;
+    
+}
+
+.join-download{
+    /* border: 1px solid red; */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+    width: 35vw;
+    height: 7vh;
+    margin-top: -6vh;
+
+}
+.join-btn{
+    background-color: #E6533C;
+    border-radius: 42px;
+    border: #E6533C;
+}
+.join-btn>a{
+    color: white;
+    text-decoration: none;
+    font-size: 2em;
+}
+
+.download-btn{
+    border-radius: 42px;
+    background-color: transparent;
+    border-color: white;
+}
+.download-btn>a{
+    color: white;
+    text-decoration: none;
+    font-size: 2em;
+}
+/* .p-1, .p-2, .join-download{
+    
+} */
+.container-2{
+    grid-area: container-2;
+    margin-left: 220px;
+    display: grid;
+    /* grid-template-rows: 3fr 1fr 0.5fr; */
+}
+
+.header-container{
+    background-color: rgba(47, 47, 47, 1.00);
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    justify-content: flex-start;
+    
+}
+/* -------------------------------------------------------------------- */
+
+.part2{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content:space-evenly;
-    /* gap: 10px; */
-    border: 2px solid #2F2F2F ;
-    border-radius: 39px;
-    font-size: 18px;
-    margin: 12px 48px ;
-    padding: 5px 5px;
-    font-weight: 400;
+}
+.image1{
+    width: 25vw;
+    display: flex;
+    margin-left: 8vw;
+    height: 100vh;
+}
 
+
+/* ---------------------------------------------------------------------- */
+.workout500{
+    position: absolute;
+    border: 1px solid rgba(255, 255, 255, 0.1);;
+    border-radius: 20px;
+    backdrop-filter: blur(20px);
+    place-items: center;
+    width: 12%;
+    left: 160vh;
+    top: 40vh;
+    text-align: center;
+
+}
+.workout500>h1{
+    font-weight: 700;
+    font-size: 40px;
+}
+/* .workcount{
+} */
+.workout500, .tutorial350{
+    color: white;
+}
+
+.img-round{
+    padding-left: 8vh;
+}
+.tutorial350{
+    position: absolute;
+    border: 1px solid rgba(255, 255, 255, 0.1);;
+    border-radius: 20px;
+    backdrop-filter: blur(20px);
+    display: grid;
+    grid-template-columns: 50px 90px;
+    place-items: center;
+    width: 15%;
+    left: 108vh;
+    top: 92vh;
     
 }
 
-.home-btn{
-    border: 1px solid #e6533c ;
-    border-radius: 46px;
-    background-color: #e6533c;
-    color: white;
-    padding: 5px 5px;
-}
+.tutorial-child{
+    padding-left: 10vh;
 
-.button{
-    list-style: none;
+}
+/* ------------------------------------------------------ */
+.second-part{
+    background-color: #000000;
+}
+.habit-des{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    margin-bottom: 6vh;
+}
+.habit-h1{
+    font-size: 48px;
+    font-weight: 800;
+    color: white;
+}
+.p{
+    color: #808080;
+}
+.habits{
+    display:flex;
+    flex-direction: row;
+    align-content: space-around;
+    justify-content: space-around ;
+
+}
+.movement, .time, .practice, .weight{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+}
+.border{
+    border: 3px solid #424242;
+    border-radius: 50%;
+    overflow: hidden;
+}
+.movement{
+}
+.time{
+
+}
+.practice{
+
+}
+.weight{
+
 }
