--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@ nav>ul{
     padding: 20px 0px;
     place-items: center; /* It will center all the list items. place-items(align-items+justify-items) */
 }
-.item1{
+.homeitem{
     padding: 19px 80px 19px 80px;
     border: 1px solid black;
     border-radius: 46px;
@@ -144,7 +144,7 @@ li>a{
     display: flex;
     flex-direction: row;
 }
-.image1{
+.first-image{
     width: 25vw;
     display: flex;
     margin-left: 8vw;
@@ -207,12 +207,12 @@ li>a{
     justify-items: center;
     margin-bottom: 6vh;
 }
-.habit-h1{
+.habit-h1, .forth-des{
     font-size: 48px;
     font-weight: 800;
     color: white;
 }
-.p{
+.p, .forth-p{
     color: #808080;
 }
 .habits{
@@ -243,4 +243,205 @@ li>a{
 }
 .weight{
 
+}
+
+/* -------------------------------------------------------------------- */
+
+
+.third-part{
+    display: flex;
+    flex-direction: row;
+    /* align-content: flex-start;
+    justify-content: flex-start; */
+}
+.third-child{
+}
+.run{
+    border: 1px solid #424242;
+    border-radius: 20px;
+    height: 400px;
+    width: 400px;
+}
+.run img{
+position: absolute;
+width: 366px;
+height: 312px;
+left: 662px;
+top: 30px;
+
+}
+
+/* ------------------------------------------------------------------- */
+
+.forth-part{
+    border: 5px solid red;
+    width: 1440px;
+    height: 702px;
+    background-color: #000000;
+    
+}
+.forth-des-p{
+    height: 15vh;
+    width: 37vw;
+    line-height: 20px;
+}
+.forth-des{
+
+}
+
+.forth-part img{
+    width: 100%;
+    height: 100%;
+}
+
+.exercise-row-1{
+    height: 265px;
+    display: flex;
+}
+
+.exercise-row-2{
+    height: 265px;
+    display: flex;
+
+}
+.exercise div{
+}
+
+/* -------------------------------------------------- */
+
+.bmi-head{
+    background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 1920px;
+    height: 300px;
+}
+.bmi-head-h{
+    color: white;
+    font-size: 5rem;
+    margin-top: 110px;
+    line-height: 1vh;
+    
+}
+.bmi-head-p{
+    color: #B0B0B0;
+    margin-left: 250px;
+
+}
+.fifth-part{
+    gap: 235px;
+    width: 1920px;
+    height: 585px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    background-color: #222222;
+
+}
+
+.measure-chart{
+    /* width: 423px;
+    height: 270px; */
+
+    width: 423px;
+    height: 270px;
+    display: flex;
+    flex-direction: row;
+    align-content: flex-start;
+    justify-content: flex-start;
+    padding: 40px 0px 0px 0px;
+}
+
+.chart, .chart1{
+    font-weight: 700;
+    font-size: 35px;
+    color: white;
+    padding: 40px 0px 0px 0px;
+}
+.bmi1, .bmi2{
+    /* width: 100%;
+    height: 100%; */
+    display: grid;
+    grid-template-rows: repeat(10, 0fr);
+    /* border: 1px solid red; */
+    color: #B0B0B0;
+    
+
+}
+.bmi1 p{
+    border: 1px solid #393939;
+    /* padding: 5px 5px; */
+    padding: 15px 30px;
+    place-items: center;
+    text-align: center;
+    margin: -0.01rem;
+    margin-right: -0.5px;
+   
+}
+
+.bmi2 p{
+    border: 1px solid #393939;
+    /* padding: 5px 5px; */
+    padding: 15px 30px;
+    place-items: center;
+    text-align: center;
+    margin: -0.01rem;
+    margin-left: -0.5px;
+   
+}
+
+.select-box{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* border: 2px solid purple; */
+    width: 770px;
+    height: 205px;
+}
+.select-box p{
+    border: 2px solid #393939;
+    border-radius: 8px;
+    background-color: #393939;
+    margin: 10px 10px;
+    place-content: center;
+    color: #B0B0B0;
+    text-align: center;
+    padding: 20px 30px;
+    
+    
+}
+.elements5{
+    grid-column: 1/3 ;
+}
+
+.fp{
+    color: #B0B0B0;
+}
+.fifth-child-1{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-items: flex-start;
+    
+}
+
+.fifth-child-2{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-items: flex-start;
+    gap: 10px;
+}
+
+.calculate{
+    background-color: #E6533C;
+    border-radius: 42px;
+    border: #E6533C;
+    color: white;
+    text-decoration: none;
+    font-size: 1.4rem;
+    padding: 25px 60px;
+    margin-top: 80px;
 }
