--- a/styles/style.css
+++ b/styles/style.css
@@ -199,6 +199,10 @@ li>a{
 /* ------------------------------------------------------ */
 .second-part{
     background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
 }
 .habit-des{
     display:flex;
@@ -212,14 +216,14 @@ li>a{
     font-weight: 800;
     color: white;
 }
-.p, .forth-p{
+.p{
     color: #808080;
+    margin-top: -15px;
 }
 .habits{
+    width: 1400px;
+    height: 500px;
     display:flex;
-    flex-direction: row;
-    align-content: space-around;
-    justify-content: space-around ;
 
 }
 .movement, .time, .practice, .weight{
@@ -228,10 +232,20 @@ li>a{
     align-items: center;
     justify-items: center;
 }
+.m, .pr, .t, .w{
+    color: white;
+    font-size: 25px;
+    font-weight: 600;
+}
 .border{
-    border: 3px solid #424242;
+    
+    border: 5px solid #424242;
     border-radius: 50%;
     overflow: hidden;
+}
+.img2, .img3, .img4, .img5{
+    width: 240px;
+    height: 240px;
 }
 .movement{
 }
@@ -246,42 +260,93 @@ li>a{
 }
 
 /* -------------------------------------------------------------------- */
-
+/* third-part */
 
 .third-part{
+    background-color: #000000;
     display: flex;
-    flex-direction: row;
-    /* align-content: flex-start;
-    justify-content: flex-start; */
+    justify-content: center;
+    padding: 150px;
+    
 }
 .third-child{
+    width: 1400px;
+    height: 500px;
+    display: flex;
+    background-color: #222222;
+    border: 1px solid #222222;
+    border-radius: 20px;
+    justify-content: space-between;
 }
+
+.third-child1{
+    height: 590px;
+    width: 440px;
+
+    margin-left: 4em;
+}
+.run-title{
+    font-size: 50px;
+    font-weight: 900;
+    color: white;
+}
+.run-des{
+    color: #B0B0B0;
+    line-height: 24px;
+    letter-spacing: 0.3;
+    font-size: 19px;
+    font-weight: 400;
+    margin-bottom: 8vh;
+}
+
+
 .run{
     border: 1px solid #424242;
     border-radius: 20px;
     height: 400px;
     width: 400px;
+    margin-top: 50px;
+    margin-right: 55px;
+    overflow: hidden;
 }
 .run img{
-position: absolute;
-width: 366px;
-height: 312px;
-left: 662px;
-top: 30px;
+    width: 400px;
+    height: 400px;
+    object-fit: none;
+    object-position: 68% 35%;
+    
+}
 
+.run-join-btn{
+    background-color: #E6533C;
+    border-radius: 42px;
+    border: #E6533C;
+    width: 17vw;
+    height: 7vh;
+}
+.run-join-btn>a{
+    color: white;
+    text-decoration: none;
+    font-size: 2em;
 }
 
 /* ------------------------------------------------------------------- */
+/* forth-part */
 
 .forth-part{
+    background-color: #000000;
+    display: flex;
+    justify-content: center;
+    
+}
+.forth-child{
     border: 5px solid red;
     width: 1440px;
     height: 702px;
-    background-color: #000000;
     
 }
 .forth-des-p{
-    height: 15vh;
+    height: 20vh;
     width: 37vw;
     line-height: 20px;
 }
@@ -289,11 +354,22 @@ top: 30px;
 
 }
 
+.forth-p{
+    color: #808080;
+}
+
 .forth-part img{
     width: 100%;
     height: 100%;
 }
-
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 0, 0, 0.3);
+}
 .exercise-row-1{
     height: 265px;
     display: flex;
@@ -308,6 +384,8 @@ top: 30px;
 }
 
 /* -------------------------------------------------- */
+/* fifth-part */
+
 
 .bmi-head{
     background-color: #000000;
@@ -396,22 +474,52 @@ top: 30px;
 .select-box{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    /* border: 2px solid purple; */
     width: 770px;
     height: 205px;
 }
-.select-box p{
+.select-box>input{
     border: 2px solid #393939;
     border-radius: 8px;
     background-color: #393939;
     margin: 10px 10px;
     place-content: center;
     color: #B0B0B0;
-    text-align: center;
     padding: 20px 30px;
-    
-    
 }
+.dropdown-container{
+    /* display: inline; */
+    position: relative;
+
+    border: 2px solid #393939;
+    border-radius: 8px;
+    background-color: #393939;
+    margin: 10px 10px;
+    place-content: center;
+    color: #B0B0B0;
+    padding: 20px 30px;
+}
+
+.dropdown-content{
+position: absolute;
+top: 30px;
+right: 0px;
+background-color: red;
+text-align: left;
+display: none;
+}
+
+.dropdown-container:hover .dropdown-content{
+    display: block;
+}
+
+/* input{
+    border: 2px solid #393939;
+    border-radius: 8px;
+    background-color: #393939;
+    margin: 10px 10px;
+    color: #B0B0B0;
+    padding: 20px 30px;
+} */
 .elements5{
     grid-column: 1/3 ;
 }
@@ -444,4 +552,213 @@ top: 30px;
     font-size: 1.4rem;
     padding: 25px 60px;
     margin-top: 80px;
+}
+
+/* --------------------------------------------------------------------------- */
+.sixth-part{
+    background-color: #000000;
+    
+}
+.sixth-child{
+    width: 1415px;
+    height: 940px;
+    padding-bottom: 100px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.meet-team{
+    width: 897px;
+    height: 145px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    margin-bottom: 9vh;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+}
+.mh1{
+    font-size: 3rem;
+    font-weight: 800;
+}
+.mp{
+    color: #B0B0B0;
+    margin-top: -40px;
+}
+.team{
+    display: flex;
+    width: 1415px;
+    height: 725px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-style: none;
+    border-radius: 20px;
+    /* gap: 12.5px; */
+    
+
+}
+.team1{
+    margin-left: 25px;
+    margin-top: 25px;
+    /* margin-right: 20px; */
+}
+
+.team2{
+    margin-left: 25px;
+    margin-top: 25px;
+    margin-right: 25px;
+}
+
+.team3{
+    /* margin-left: 25px; */
+    margin-top: 25px;
+    margin-right: 20px;
+}
+.team1, .team2, .team3{
+    width: 437px;
+    height: 677px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    gap: 15px;
+    overflow: hidden;
+    
+    
+}
+
+.trainer1, .trainer2, .trainer3, .trainer4, .trainer5, .trainer6{
+    width: 437px;
+    height: 326px;
+    border-radius: 20px;
+    
+}
+.trainer1,.trainer4{
+    margin-bottom: 9px;
+}
+.trainer2, .trainer5{
+    margin-bottom: 9px;
+}
+.trainer3, .trainer6{
+    margin-bottom: 9px;
+}
+
+/* ------------------------------------------------------------------------ */
+
+.footer{
+    width: 1920px;
+    height: 588px;
+    background-color: #1A1A1A;
+    
+}
+
+.footer-child{
+    display: flex;
+    flex-direction: row;
+    align-content: space-evenly;
+    justify-content: space-evenly;
+}
+.getstarted1{
+    width: 585px;
+    height: 212px;
+}
+.getstarted2{
+    /* display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-content: center; */
+    width: 218px;
+    height: 332px;
+    /* border: 2px solid red; */
+    
+
+}
+.getstarted2>ul{
+    margin-left: -40px;
+
+}
+.getstarted3>ul{
+    margin-left: -40px;
+
+}
+.getstarted3{
+    /* display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    align-content: flex-start; */
+}
+.getstarted2>ul>li>a{
+    color: #B0B0B0;
+    
+}
+.getstarted3>ul>li>a{
+    color: #B0B0B0;
+    
+}
+
+
+.getstarted2>ul>li{
+    list-style: none;
+    padding: 10px 10px 10px 0px;
+    font-size: 25px;
+    font-weight: 400;
+    line-height: 27px;
+}
+.getstarted3>ul>li{
+    list-style: none;
+    padding: 10px 10px 10px 0px;
+    font-size: 25px;
+    font-weight: 400;
+    line-height: 27px;
+}
+.fitness-last{
+    padding: 20px 0px 0px 0px;
+    color: #E6533C;
+    font-size: 70px;
+    font-weight: 800;
+    line-height: 20px;
+    place-content: center;
+}
+/* .mp{
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-self: center;
+} */
+ .footer-des{
+    color: #B0B0B0;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+ }
+
+.last-border{
+    border: 2px solid #313131;
+    width: 1440px;
+    margin-top: 90px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.last-line{
+    color: #B0B0B0;
+    text-align: center;
+    margin-top: 50px;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+/* responsive for small device */
+
+@media screen and (max-width:576px) {
+    .header-container{
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        align-items: center;
+    }
+
+    .navbar{
+        display: none;
+    }
 }
