--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+body{
+    width: 100%;
+}
 .work-sans-font{
     font-family: "Work Sans", sans-serif;
     font-optical-sizing: auto;
@@ -9,7 +12,7 @@
     src: url("https://fonts.cdnfonts.com/css/miama");
 }
 
-.fitness, .navbar{
+.fitness , .navbar{
     padding: 5px;
 }
 .fitness{
@@ -18,6 +21,7 @@
     color: #E6533C;
     font-size: 1.5em;
     place-content: center;
+    border: 2px solid red;
 
     
 
@@ -85,8 +89,7 @@ li>a{
     font-size: 1.5em;
     color: rgba(255, 255, 255, 0.50);
     width: 40vw;
-    height: 2vh;
-    
+    height: auto;
 }
 
 .join-download{
@@ -94,9 +97,8 @@ li>a{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 50px;
-    width: 35vw;
-    height: 7vh;
-    margin-top: -6vh;
+    /* width: 20rem; */
+    /* height: 7vh; */
 
 }
 .join-btn{
@@ -124,9 +126,6 @@ li>a{
     
 } */
 .container-2{
-    grid-area: container-2;
-    margin-left: 220px;
-    display: grid;
     /* grid-template-rows: 3fr 1fr 0.5fr; */
 }
 
@@ -142,7 +141,6 @@ li>a{
 
 .part2{
     display: flex;
-    flex-direction: row;
 }
 .first-image{
     width: 25vw;
@@ -282,7 +280,6 @@ li>a{
 .third-child1{
     height: 590px;
     width: 440px;
-
     margin-left: 4em;
 }
 .run-title{
@@ -748,17 +745,782 @@ display: none;
     font-size: 20px;
 }
 
+
+
+/* -------------------------------------------------- */
 /* responsive for small device */
 
 @media screen and (max-width:576px) {
+    body{
+        width: 100%;
+    }
+    .work-sans-font{
+        font-family: "Work Sans", sans-serif;
+        font-optical-sizing: auto;
+        /* font-weight: <weight>; */
+        font-style: normal;
+        margin: 0px 0px;
+    }
+    .shape{
+        src: url("https://fonts.cdnfonts.com/css/miama");
+    }
+    .fitness, .navbar{
+        padding: 5px;
+    }
+    .fitness{
+        /* grid-area: fitness; */
+        /* padding: 20px 0px 20px 0px; */
+        padding: 0px 0px;
+        color: #E6533C;
+        font-size: 1.5em;
+        border: 1px solid white;
+        height: auto;
+        margin-bottom: 3rem;
+    }
+
+    .fitness>h1>b>i{
+    }
+    .navbar{
+       display: none;
+    }
+    
+    nav>ul{
+        list-style: none;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        border: 4px solid #424242;
+        border-radius: 39px;
+        padding: 20px 0px;
+        place-items: center; /* It will center all the list items. place-items(align-items+justify-items) */
+    }
+    .homeitem{
+        padding: 19px 80px 19px 80px;
+        border: 1px solid black;
+        border-radius: 46px;
+        background-color: #E6533C;
+        border: hidden;
+        color: white;
+    }
+    li>a{
+        text-decoration: none;
+        color: white;
+        
+    }
+    
+    .container-1{
+        display: flex;
+        flex-direction: column;
+        justify-items: left;
+        align-items: left;
+    }
+    
+    /* ------------------------------------------------------------------ */
+    
+    @font-face {
+        font-family: Miama;
+        src: url('../font/Miama-Regular.ttf');
+    }
+    .p-1{
+        /* border: 1px solid black; */
+        font-size: 3.5em;
+        color: white;
+        /* width: 15vw; */
+        /* line-height: 1; */
+        white-space: nowrap;
+        border: 1px blue;
+    }
+    .p-2{
+        /* border: 1px solid orange; */
+        font-size: 1.5rem;
+        color: rgba(255, 255, 255, 0.50);
+        /* height: 2vh;
+        margin-top: 1rem; */
+        white-space: nowrap;
+        border: 1px solid aqua;
+        /* margin-bottom: 5rem; */
+    }
+    .p-2>p{
+    }
+    
+    .join-download{
+        display: flex;
+        flex-direction: row;
+        justify-content: left;
+        align-content: left;
+        gap: 10px;
+    
+    }
+    .join-btn{
+        background-color: #E6533C;
+        border-radius: 42px;
+        border: #E6533C;
+    }
+    .join-btn>a{
+        color: white;
+        text-decoration: none;
+        font-size: 2em;
+    }
+    
+    .download-btn{
+        border-radius: 42px;
+        background-color: transparent;
+        border-color: white;
+    }
+    .download-btn>a{
+        color: white;
+        text-decoration: none;
+        font-size: 2em;
+    }
+    /* .p-1, .p-2, .join-download{
+        
+    } */
+    .container-2{
+        display: flex;
+        flex-direction: column;
+        /* margin-left: 3rem; */
+        width: 100%;
+        /* grid-template-rows: 3fr 1fr 0.5fr; */
+        height: auto;
+    }
+    
     .header-container{
+        background-color: rgba(47, 47, 47, 1.00);
+        display: flex;
+        flex-direction: column;
+        align-content: flex-start;
+        justify-content: flex-start;
+        
+    }
+    /* -------------------------------------------------------------------- */
+    
+    .part2{
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        height: auto;
+    }
+    .first-image{
+        width: 20%;
+        display: flex;
+
+    }
+    
+    
+    /* ---------------------------------------------------------------------- */
+    .workout500{
+        position: absolute;
+        border: 1px solid rgba(255, 255, 255, 0.1);;
+        border-radius: 20px;
+        /* backdrop-filter: blur(20px); */
+        place-items: center;
+        width: 40%;
+        left: 40vh;
+        top: 85vh;
+        text-align: left;
+        padding: 0px 0px 0px 15px;
+
+    
+    }
+    .workout500>h1{
+        /* font-weight: 700; */
+        font-size: 40px;
+        margin-bottom: -20px;
+        margin-top: 1vh;
+    }
+    /* .workcount{
+    } */
+    .workout500, .tutorial350{
+        color: white;
+    }
+    
+    /* .img-round{
+        padding-left: 8vh;
+    } */
+    .tutorial350{
+        position: absolute;
+        border: 1px solid rgba(255, 255, 255, 0.1);;
+        border-radius: 20px;
+        width: 55%;
+        left: 10vh;
+        top: 125vh;
+        
+    }
+    
+    .tutorial-child{
+        padding-left: 10vh;
+    }
+    .tutorial-child>p{
+        border: 1px solid red;
+    }
+    .tutorial-child>h1{
+        margin-bottom: -2vh;
+    }
+    /* ------------------------------------------------------ */
+    /* second-part */
+
+    .second-part{
+        background-color: #000000;
         display: flex;
         flex-direction: column;
         justify-items: center;
         align-items: center;
     }
+    .habit-des{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+        margin-bottom: 6vh;
+    }
+    .habit-h1, .forth-des{
+        font-size: 48px;
+        font-weight: 800;
+        color: white;
+    }
+    .ps1{
+        margin-top: -15px;
+    }
 
-    .navbar{
+    .ps1, .ps2, .ps3, .ps4{
+        color: #808080;
+        margin-top: -10px;
+    }
+    .habits{
+        width: auto;
+        height: auto;
+        display:flex;
+        flex-direction: column;
+        justify-items: center;
+        align-items: center;
+    
+    }
+    .movement, .time, .practice, .weight{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+        margin-bottom: 60px;
+    }
+    .m, .pr, .t, .w{
+        color: white;
+        font-size: 25px;
+        font-weight: 600;
+    }
+    .border{
+        border: 5px solid #424242;
+        border-radius: 50%;
+        overflow: hidden;
+    }
+    .img2, .img3, .img4, .img5{
+        width: 240px;
+        height: 240px;
+    }
+    .movement{
+    }
+    .time{
+    
+    }
+    .practice{
+    
+    }
+    .weight{
+    
+    }
+    
+    /* -------------------------------------------------------------------- */
+    /* third-part */
+    
+    .third-part{
+        background-color: #000000;
+        display: flex;
+        justify-content: center;
+        /* border: 3px solid white; */
+        width: auto;
+        height: auto;
+    }
+    .third-child{
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        align-items: center;
+        
+        background-color: #222222;
+        border: 1px solid #222222;
+        border-radius: 20px;
+
+        width: 320%;
+        height: fit-content;
+
+        margin-top: -120%;
+    }
+    
+    .third-child1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+        width: 95%;
+        margin-left: 6%;
+    }
+    .run-title{
+        font-size: 45px;
+        font-weight: 700;
+        color: white;
+    }
+    .run-des{
+        color: #8b8b8b;
+        line-height: 30px;
+        letter-spacing: 0.3;
+        font-size: 19px;
+        font-weight: 400;
+    }
+    .run{
+        border-radius: 20px;
+        width: 20em;
+        height: 15em;
+        margin-left: 14%;
+        margin-top: -19%;
+        margin-bottom: 9%;
+    }
+    .run>img{
+        object-fit: cover;
+        translate: scale(1.9);
+
+    }
+    .run-join-btn{
+        background-color: #E6533C;
+        border-radius: 42px;
+        border: #E6533C;
+        width: 90%;
+        height: 12%;
+        margin-right: 6%;
+    }
+    .run-join-btn>a{
+        color: white;
+        text-decoration: none;
+        font-size: 2em;
+    }
+    
+    /* ------------------------------------------------------------------- */
+    /* forth-part */
+    
+    .forth-part{
+        background-color: #000000;
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        height: auto;
+        /* display: none; */
+        
+    }
+    .forth-child{
+        width: auto;
+        height: auto;
+        
+    }
+    .forth-des-p{
+        height: 20vh;
+        width: 37vw;
+        line-height: 20px;
+    }
+    .forth-des{
+    
+    }
+    
+    .forth-p{
+        color: #808080;
+    }
+    
+    .forth-part img{
+        width: 100%;
+        height: 100%;
+    }
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 0, 0, 0.3);
+    }
+    .exercise-row-1{
+        height: 265px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .exercise-row-2{
+        height: 265px;
+        display: flex;
+        flex-direction: column;
+    
+    }
+    .exercise div{
+    }
+    
+    /* -------------------------------------------------- */
+    /* fifth-part */
+    
+    
+    .bmi-head{
+        background-color: #000000;
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        height: auto;
+    }
+    .bmi-head-h{
+        color: white;
+        font-size: 3em;
+        
+    }
+    .bmi-head-p{
+        color: #B0B0B0;
+        margin-left: 2em;
+        margin-top: -25px;
+        font-size: 20px;
+    }
+    .fifth-part{
+        background-color: #222222;
+        width: auto;
+        height: auto;
+        margin-top: 200%;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .measure-chart{
+        display: flex;
+        flex-direction: row;
+        align-content: space-evenly;
+        justify-content: space-evenly;
+        padding: 40px 0px 0px 0px;
+    }
+    
+    .chart, .chart1{
+        font-weight: 700;
+        font-size: 35px;
+        color: white;
+        margin-left: 3%;
+        margin-bottom: -3%;
+        margin-top: -3%;
+    }
+    .bmi1, .bmi2{
+        /* width: 100%;
+        height: 100%; */
+        display: grid;
+        grid-template-rows: repeat(10, 0fr);
+        /* border: 1px solid red; */
+        color: #B0B0B0;
+        
+    
+    }
+    .bmi1 p{
+        border: 1px solid #393939;
+        /* padding: 5px 5px; */
+        padding: 15px 30px;
+        place-items: center;
+        text-align: center;
+        margin: -0.01rem;
+        margin-right: -0.5px;
+       
+    }
+    
+    .bmi2 p{
+        border: 1px solid #393939;
+        /* padding: 5px 5px; */
+        padding: 15px 30px;
+        place-items: center;
+        text-align: center;
+        margin: -0.01rem;
+        margin-left: -0.5px;
+       
+    }
+    
+    .select-box{
+        display: grid;
+        grid-template-columns: repeat(2, 27.5%);
+    }
+    .select-box>input{
+        border: 2px solid #393939;
+        border-radius: 8px;
+        background-color: #393939;
+        margin: 10px 10px;
+        place-content: center;
+        color: #B0B0B0;
+        padding: 20px 30px;
+        font-size: 15px;
+    }
+    
+    input{
+        border: 2px solid #393939;
+        border-radius: 8px;
+        background-color: #393939;
+        margin: 10px 10px;
+        color: #B0B0B0;
+    }
+    .elements5{
+        grid-column: 1/3 ;
+    }
+    
+    .fp{
+        color: #B0B0B0;
+        margin-left: 3%;
+    }
+    .fifth-child-1{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .fifth-child-2{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-items: flex-start;
+        gap: 10px;
+    }
+    
+    .calculate{
+        background-color: #E6533C;
+        border-radius: 42px;
+        border: #E6533C;
+        color: white;
+        text-decoration: none;
+        font-size: 1.4rem;
+        padding: 25px 60px;
+        margin-bottom: 10%;
+        margin-left: 0.5em;
+    }
+    
+    /* --------------------------------------------------------------------------- */
+    .sixth-part{
+        background-color: #000000;
+        
+    }
+    .sixth-child{
+        width: auto;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        align-items: center;
+        margin-left: 5%;
+        margin-right: 5%;
+
+    }
+    .meet-team{
+        width: auto;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+        margin-bottom: 9vh;
+        color: white;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .mh1{
+        font-size: 3rem;
+        font-weight: 800;
+    }
+    .mp{
+        color: #B0B0B0;
+        margin-top: -40px;
+    }
+    .team{
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        height: auto;
+        background-color: rgba(255, 255, 255, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-style: none;
+        border-radius: 20px;
+    }
+    .team2{
+        margin-top: -1%;
+    }
+    .team3{
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        align-items: center;
+    }
+    .team1, .team2, .team3{
+        width: 93%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        overflow: hidden; 
+    }
+    .trainer3, .trainer4, .trainer5, .trainer6{
+        width: 330px;
+        height: 275px;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+    }
+    .t-des{
+        position: absolute;
+        top: 466rem;
+        left: 4rem;
+    }
+    .t-des2{
+        position: absolute;
+        top: 485rem;
+        left: 4rem;
+    }
+    .t-des3{
+        position: absolute;
+        top: 504rem;
+        left: 4rem;
+    }
+    .t-des4{
+        position: absolute;
+        top: 523rem;
+        left: 4rem;
+    }
+    .h-clr{
+        font-weight: 700;
+        font-size: 25px;
+        color: white;
+    }
+    .p-clr{
+        color: #B0B0B0;
+        font-size: 22px;
+        margin-top: -1.5em;
+    }
+    
+
+    .trainer1, .trainer2{
         display: none;
     }
+    .trainer3, .trainer4{
+        margin-right: 1.5em;
+    }
+    .trainer3, .trainer6{
+        object-fit: contain;
+        border: 1px solid #808080;
+        border-radius: 20px ;
+        border: none;
+    }
+    .trainer5, .trainer6{
+        border: 1px solid #808080;
+        border-radius: 18px ;
+        border: none;
+        margin-left: 4.5%;
+    }
+    .trainer6{
+        margin-bottom: 9%;
+    }
+    /* ------------------------------------------------------------------------ */
+    
+    .footer{
+        width: auto;
+        height: auto;
+        background-color: #1A1A1A;
+        
+    }
+    
+    .footer-child{
+        display: flex;
+       flex-direction: column;
+    }
+
+    .chartf1, .chartf2{
+        font-weight: 700;
+        font-size: 35px;
+        color: white;
+    }
+    .getstarted1{
+        width: auto;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        margin-left: 2em;
+    }
+    .getstarted2{
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        height: auto;
+        margin-left: 2em;
+        margin-top: 9em;
+        
+    
+    }
+    .getstarted2>ul{
+        margin-left: -40px;
+    
+    }
+    .getstarted3>ul{
+        margin-left: -40px;
+    
+    }
+    .getstarted3{
+        width: auto;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        margin-left: 2em;
+    }
+    .getstarted2>ul>li>a{
+        color: #B0B0B0;
+        
+    }
+    .getstarted3>ul>li>a{
+        color: #B0B0B0;
+        
+    }
+    
+    
+    .getstarted2>ul>li{
+        list-style: none;
+        padding: 10px 10px 10px 0px;
+        font-size: 25px;
+        font-weight: 400;
+        line-height: 27px;
+    }
+    .getstarted3>ul>li{
+        list-style: none;
+        padding: 10px 10px 10px 0px;
+        font-size: 25px;
+        font-weight: 400;
+        line-height: 27px;
+    }
+    .fitness-last{
+        padding: 20px 0px 0px 0px;
+        color: #E6533C;
+        font-size: 70px;
+        font-weight: 800;
+        line-height: 20px;
+        place-content: center;
+    }
+     .footer-des{
+        color: #B0B0B0;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 30px;
+     }
+    
+    .last-border{
+        border: 2px solid #313131;
+        width: 80%;
+        margin-top: 90px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .last-line{
+        color: #B0B0B0;
+        text-align: center;
+        margin-top: 50px;
+        font-weight: 400;
+        font-size: 20px;
+        padding-bottom: 50px;
+    }
+    
 }
